fixed default horizontal scroll in style.css

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: helvari, Arial, Tahoma, sans-serif;
+    margin: 0;
 }
 
 .avatar {
